- Fixed bug #52160 (Invalid E_STRICT redefined constructor error)